# dyno_core

./: .gitignore  Cargo.toml  README.md  check.sh  tests.sh
.github/workflows/: rust.yml
examples/: plot_perf.rs
src/: config.rs  crypto.rs  error.rs  ext.rs  lib.rs  logger.rs  macros.rs  ploting.rs  validator.rs
src/convertions/: angular.rs  length.rs  mod.rs  power.rs  speed.rs  temperature.rs  torque.rs  weight.rs
src/data_structure/: buffer.rs  data_buffer.rs  filter.rs  infomotor.rs  mod.rs
src/model/: dynotests.rs  mod.rs  role.rs  users.rs
src/server/: backend.rs  config.rs  dynotests.rs  mod.rs  role.rs  users.rs
tests/: dyno_buffer.rs  dyno_data.rs  dyno_type_test.rs
tests/files/: test_bin.dyno  test_csv.csv  test_excel.xlsx
