[package]
name = "dyno_core"
version = "0.1.0"
authors = ["Rizal Achmad Pahlevi <rizal.ahmadp@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dynotestpolije/dyno_core"
# license = "MIT"
# license-file = "LICENSE"
keywords = ["network", "graphics", "embeded", "gui", "client", "math", "server"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default     = ["dep:log", "use_chrono", "dep:uuid"]

backend         = ["dep:actix-web", "use_crypto"]
frontend        = ["dep:reqwest"]
use_wasm        = ["uuid?/v7", "uuid?/js", "dep:web-sys", "plotly?/wasm"]
use_excel       = ["dep:calamine", "dep:rust_xlsxwriter"]
use_regex       = ["dep:regex"]
use_chrono      = ["dep:chrono"]
use_plot        = ["dep:plotly"]
use_async       = ["use_tokio", "dep:crossbeam-channel"]
use_tokio       = ["dep:tokio"]
use_crypto      = ["password_hashing", "jwt_encode_decode", "checksum"]

password_hashing  = ["dep:argon2", "dep:rand_core"]
jwt_encode_decode = ["dep:jsonwebtoken", "dep:base64"]
checksum          = ["dep:sha2"]

use_log         = []
use_bincode     = []

[dependencies]
miniz_oxide         = { version = "0.7.1", features = ["std"] }
derive_more         = { version = "^0.99" }
lazy_static         = { version = "^1.4" }
serde_json          = { version = "^1" }
toml                = { version = "^0.7" }
paste               = { version = "^1" }
serde               = { version = "^1", features = ["derive"] }
bincode             = { version = "^1.3" }

chrono              = { optional = true, version = "^0.4", features = ["serde"]}
log                 = { optional = true, version = "^0.4" }
regex               = { optional = true, version = "^1.8" } # For checking if we need to skip auth
reqwest             = { optional = true, version = "^0.11", features = ["json", "multipart"] }
tokio               = { optional = true, version = "^1.28", features = ["full"] }
crossbeam-channel   = { optional = true, version = "^0.5" }
calamine            = { optional = true, version = "^0.21", features = ["dates"] }
rust_xlsxwriter     = { optional = true, version = "^0.41" }

base64              = { optional = true, version = "0.21" }
argon2              = { optional = true, version = "^0.5" } 
jsonwebtoken        = { optional = true, version = "^8" }
rand_core           = { optional = true, version = "^0.6", features = ["std"] }
sha2                = { optional = true, version = "^0.10" }
plotly              = { optional = true, version = "^0.8" }

[dependencies.web-sys]
optional = true
version = "^0.3"
features = [
    "HtmlCanvasElement",
    "HtmlInputElement",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "SvgElement",
]

[dependencies.actix-web]
version = "4"
optional = true

[dependencies.uuid]
version = "^1.3"
optional = true
features = [ "serde", "v4" ] 
# [profile.release]
# debug = true
